[package]
name = "plain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sys"
path = "src/sys/main.rs"

[[bin]]
name = "life"
path = "src/life/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.110"
rustrict = "0.7.10"
lazy_static = "1.0"
